🐛💄bug: try of align vertically div connexion
Le texte du bouton connexion est centré, mais pas l'image.

--- a/style.css
+++ b/style.css
@@ -216,6 +216,13 @@ div{
     -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
+/* essai d'alignement vertical du contenu de la balise connexion*/
+.btn-connect {
+    flex-direction: row;
+    display:block;
+    text-align: center;
+    line-height: 2.5em;
+}
 
 .connexion-a-div-nav-header {
     text-align: center;
@@ -226,6 +233,7 @@ div{
     position: relative;
     right: 5em;
 }
+
 
 .pop-up-auth {
     display:none;
